News UAT/force-app/main/default/objects/Booking__c/fields/Next_Expiry_Publication__c.field-meta.xml
<CustomField>
    <fullName>Next_Expiry_Publication__c</fullName>
    <description>Next Expiry - Publication</description>
    <label>Next Expiry - Publication</label>
    <length>100</length>
    <type>Text</type>
</CustomField>