News UAT/force-app/main/default/objects/Booking__c/fields/Next_Expiry_Section__c.field-meta.xml
<CustomField>
    <fullName>Next_Expiry_Section__c</fullName>
    <description>Next Expiry - Section</description>
    <label>Next Expiry - Section</label>
    <length>30</length>
    <type>Text</type>
</CustomField>