News UAT/force-app/main/default/objects/Booking__c/fields/NonAdjustedTotal__c.field-meta.xml
<CustomField>
    <fullName>NonAdjustedTotal__c</fullName>
    <label>Gross Price - Non Adjusted GST Excl</label>
    <summarizedField>Booking_Line_Item__c.NonAdjustedTotal__c</summarizedField>
    <summaryForeignKey>Booking_Line_Item__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>