News UAT/force-app/main/default/objects/Booking__c/fields/NonAdjustedTotalIncl__c.field-meta.xml
<CustomField>
    <fullName>NonAdjustedTotalIncl__c</fullName>
    <formula>(1 + $Setup.News_Default_Setting__c.GST_Percentage__c) * NonAdjustedTotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Price - Non Adjusted GST Incl</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>