News UAT/force-app/main/default/objects/Booking__c/fields/OSCA_Deal_Id__c.field-meta.xml
<CustomField>
    <fullName>OSCA_Deal_Id__c</fullName>
    <description>OSCA Deal Id</description>
    <label>OSCA Deal Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>