News UAT/force-app/main/default/objects/Booking__c/fields/Payer_Account__c.field-meta.xml
<CustomField>
    <fullName>Payer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Payer Account</description>
    <label>Payer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bookings (Payer Account)</relationshipLabel>
    <relationshipName>Bookings1</relationshipName>
    <type>Lookup</type>
</CustomField>