News UAT/force-app/main/default/objects/Booking__c/fields/Payer_GBA_Type__c.field-meta.xml
<CustomField>
    <fullName>Payer_GBA_Type__c</fullName>
    <description>NewsAdds to populate on creation of Booking</description>
    <label>Payer GBA Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>