News UAT/force-app/main/default/objects/Booking__c/fields/Payer_Name__c.field-meta.xml
<CustomField>
    <fullName>Payer_Name__c</fullName>
    <label>Payer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>