News UAT/force-app/main/default/objects/Booking__c/fields/Payer_SF_Id__c.field-meta.xml
<CustomField>
    <fullName>Payer_SF_Id__c</fullName>
    <description>NewsAdds to populate on creation of Booking</description>
    <label>Payer SF Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>