News UAT/force-app/main/default/objects/Booking__c/fields/Placer_Account__c.field-meta.xml
<CustomField>
    <fullName>Placer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Placer Account</description>
    <label>Placer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bookings (Placer Account)</relationshipLabel>
    <relationshipName>Bookings2</relationshipName>
    <type>Lookup</type>
</CustomField>