News UAT/force-app/main/default/objects/Booking__c/fields/Placer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Placer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Placer Contact from the Parent Sales Order</description>
    <label>Placer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>