News UAT/force-app/main/default/objects/Booking__c/fields/Placer_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Placer_Contact_Name__c</fullName>
    <formula>Placer_Contact__r.FirstName &amp; &#39; &#39; &amp;  Placer_Contact__r.LastName</formula>
    <label>Placer Contact Name</label>
    <type>Text</type>
</CustomField>