News UAT/force-app/main/default/objects/Booking__c/fields/Placer_Name__c.field-meta.xml
<CustomField>
    <fullName>Placer_Name__c</fullName>
    <formula>Placer_Account__r.Name</formula>
    <label>Placer Name</label>
    <type>Text</type>
</CustomField>