News UAT/force-app/main/default/objects/Booking__c/fields/Quote_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Quote_Confirmation__c</fullName>
    <description>Select whether to send a Quote, Confirmation to Placer Contact.</description>
    <inlineHelpText>Select whether to send a Quote, Confirmation to Placer Contact.</inlineHelpText>
    <label>Quote/Confirmation?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Confirmation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>