News UAT/force-app/main/default/objects/Booking__c/fields/Quote_Confirmation_bcc__c.field-meta.xml
<CustomField>
    <fullName>Quote_Confirmation_bcc__c</fullName>
    <label>BCC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>