News UAT/force-app/main/default/objects/Booking__c/fields/Quote_Confirmation_cc__c.field-meta.xml
<CustomField>
    <fullName>Quote_Confirmation_cc__c</fullName>
    <label>CC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>