News UAT/force-app/main/default/objects/Booking__c/fields/Quote_Confirmation_Fax__c.field-meta.xml
<CustomField>
    <fullName>Quote_Confirmation_Fax__c</fullName>
    <inlineHelpText>Fax numbers should follow the phone dialling standard (country code) + (area code) + (phone number) ie. 61290028111</inlineHelpText>
    <label>Quote/Confirmation Fax</label>
    <length>18</length>
    <type>Text</type>
</CustomField>