News UAT/force-app/main/default/objects/Booking__c/fields/Quote_Confirmation_Message__c.field-meta.xml
<CustomField>
    <fullName>Quote_Confirmation_Message__c</fullName>
    <description>Quote/Confirmation Message for User modification prior to the quote or booking confirmation being sent out.</description>
    <label>Quote/Confirmation Message</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>