News UAT/force-app/main/default/objects/Booking__c/fields/Quote_Confirmation_waiting_msg_sent__c.field-meta.xml
<CustomField>
    <fullName>Quote_Confirmation_waiting_msg_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote/Confirmation waiting msg sent</label>
    <type>Checkbox</type>
</CustomField>