News UAT/force-app/main/default/objects/Booking__c/fields/Quote_or_Confirmation_Flag_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_or_Confirmation_Flag_Send_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To set Send Date for Quote/Confirmation</description>
    <label>Quote or Confirmation Flag Send Date</label>
    <type>Checkbox</type>
</CustomField>