News UAT/force-app/main/default/objects/Booking__c/fields/Quote_or_Confirmation_From_Email__c.field-meta.xml
<CustomField>
    <fullName>Quote_or_Confirmation_From_Email__c</fullName>
    <description>This field is used to store the user selected From address for the outbound booking quote/confirmation email.</description>
    <label>Quote or Confirmation From Email</label>
    <type>Email</type>
</CustomField>