News UAT/force-app/main/default/objects/Booking__c/fields/Quote_or_Confirmation_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_or_Confirmation_Sent_Date__c</fullName>
    <description>The Date/Time when a Quote or Confirmation has been sent.</description>
    <label>Quote or Confirmation Sent Date</label>
    <type>DateTime</type>
</CustomField>