News UAT/force-app/main/default/objects/Booking__c/fields/Quote_or_Confirmation_User__c.field-meta.xml
<CustomField>
    <fullName>Quote_or_Confirmation_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This lookup is used to populate the From information for the outbound booking Quote/Confirmation visualforce template.</description>
    <label>Quote or Confirmation User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bookings2</relationshipName>
    <type>Lookup</type>
</CustomField>