News UAT/force-app/main/default/objects/Booking__c/fields/Quote_Publications__c.field-meta.xml
<CustomField>
    <fullName>Quote_Publications__c</fullName>
    <description>Publications List used for the Quote</description>
    <label>Publications</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>