News UAT/force-app/main/default/objects/Booking__c/fields/Receipt__c.field-meta.xml
<CustomField>
    <fullName>Receipt__c</fullName>
    <description>Receipt Number</description>
    <label>Receipt</label>
    <length>50</length>
    <type>Text</type>
</CustomField>