News UAT/force-app/main/default/objects/Booking__c/fields/Resend_Pick__c.field-meta.xml
<CustomField>
    <fullName>Resend_Pick__c</fullName>
    <description>Resend for the Booking Quote/Confirmation</description>
    <inlineHelpText>Please select the appropriate option to resend this Quote/Confirmation</inlineHelpText>
    <label>Resend</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Quote_Confirmation__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Resend Immediately</fullName>
            </value>
            <value>
                <fullName>Resend with Booking Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>