News UAT/force-app/main/default/objects/Booking__c/fields/Run_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Run_Schedule__c</fullName>
    <description>Run Schedule</description>
    <label>Run Schedule</label>
    <type>TextArea</type>
</CustomField>