News UAT/force-app/main/default/objects/Booking__c/fields/Sales_Order_Ad_Taker__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Ad_Taker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sales Order Ad Taker</description>
    <label>Sales Order Ad Taker</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bookings1</relationshipName>
    <type>Lookup</type>
</CustomField>