News UAT/force-app/main/default/objects/Booking__c/fields/Sales_Order_Advertiser__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Advertiser__c</fullName>
    <description>Advertiser Account for the related Sales Order</description>
    <formula>Sales_Order__r.Advertiser_Account__c</formula>
    <label>Customer</label>
    <type>Text</type>
</CustomField>