News UAT/force-app/main/default/objects/Booking__c/fields/Sales_Order_Owner__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sales Order Owner</description>
    <label>Sales Order Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>