News UAT/force-app/main/default/objects/Booking__c/fields/Sales_Order_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Owner_Name__c</fullName>
    <formula>Sales_Order__r.Owner:User.FirstName + &#39; &#39; +  Sales_Order__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Order Owner</label>
    <type>Text</type>
</CustomField>