News UAT/force-app/main/default/objects/Booking__c/fields/Sales_Order_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Owner_Role__c</fullName>
    <inlineHelpText>The role of the initial owner of the Sales order associated with this Booking</inlineHelpText>
    <label>Sales Order Owner Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>