News UAT/force-app/main/default/objects/Booking__c/fields/Sales_Order_Payer_Account__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Payer_Account__c</fullName>
    <description>Sales Order Payer Account</description>
    <formula>Sales_Order__r.Payer_Account__c</formula>
    <label>Payer Account</label>
    <type>Text</type>
</CustomField>