News UAT/force-app/main/default/objects/Booking__c/fields/Sales_Order_Placer_Account__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Placer_Account__c</fullName>
    <description>Sales Order Placer Account</description>
    <formula>Sales_Order__r.Placer_Account__c</formula>
    <label>Placer Account</label>
    <type>Text</type>
</CustomField>