News UAT/force-app/main/default/objects/Booking__c/fields/Sales_Order_Placer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Placer_Contact__c</fullName>
    <description>Sales Order Placer Contact</description>
    <formula>Sales_Order__r.Contact__c</formula>
    <label>Placer Contact</label>
    <type>Text</type>
</CustomField>