News UAT/force-app/main/default/objects/Booking__c/fields/Send_Channel__c.field-meta.xml
<CustomField>
    <fullName>Send_Channel__c</fullName>
    <label>Send Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>