News UAT/force-app/main/default/objects/Booking__c/fields/Send_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Booking Quote/Confirmation</description>
    <label>Sent via Email</label>
    <type>Checkbox</type>
</CustomField>