News UAT/force-app/main/default/objects/Booking__c/fields/Send_Fax__c.field-meta.xml
<CustomField>
    <fullName>Send_Fax__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Send Fax for Booking Quote/Confirmation</description>
    <label>Sent via Fax</label>
    <type>Checkbox</type>
</CustomField>