News UAT/force-app/main/default/objects/Booking__c/fields/Third_Party_Created__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Created__c</fullName>
    <description>3rd Party Created Date</description>
    <label>3rd Party Created</label>
    <type>DateTime</type>
</CustomField>