News UAT/force-app/main/default/objects/Booking__c/fields/Total_Column_cm__c.field-meta.xml
<CustomField>
    <fullName>Total_Column_cm__c</fullName>
    <description>Total Column (cm) - sum of line item Units</description>
    <label>Total Column (cm)</label>
    <summarizedField>Booking_Line_Item__c.Number_of_Units__c</summarizedField>
    <summaryFilterItems>
        <field>Booking_Line_Item__c.Cancelled__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Booking_Line_Item__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>