News UAT/force-app/main/default/objects/Booking__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <description>2016-04-15 Item-00028 SFE-449 - Updated so CyberAd also uses Line_Item_Gross_Price__c, rather than Total_Cost_Cyber__c</description>
    <formula>Line_Item_Gross_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost GST Excl</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>