News UAT/force-app/main/default/objects/Booking__c/fields/Total_Cost_Cyber__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Cyber__c</fullName>
    <description>Total Cost for non Genera Bookings
2016-04-15 Item-00028 SFE-449 - Updated so it is clear that Total_Cost_Cyber__c includes GST value</description>
    <label>Total Cost Cyber GST Incl</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>