News UAT/force-app/main/default/objects/Booking__c/fields/TotalCredits__c.field-meta.xml
<CustomField>
    <fullName>TotalCredits__c</fullName>
    <label>Total Credits</label>
    <summarizedField>Booking_Line_Item__c.TotalCredits__c</summarizedField>
    <summaryForeignKey>Booking_Line_Item__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>