News UAT/force-app/main/default/objects/Booking__c/fields/TotalDebits__c.field-meta.xml
<CustomField>
    <fullName>TotalDebits__c</fullName>
    <label>Total Debits</label>
    <summarizedField>Booking_Line_Item__c.TotalDebits__c</summarizedField>
    <summaryForeignKey>Booking_Line_Item__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>