News UAT/force-app/main/default/objects/Booking__c/fields/Transfer_Booking_Number__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Booking_Number__c</fullName>
    <label>Transfer Booking Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>