News UAT/force-app/main/default/objects/Booking__c/validationRules/Fax_numbers_can_only_contain_numbers.validationRule-meta.xml
<ValidationRule>
    <fullName>Fax_numbers_can_only_contain_numbers</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 OR(
  ISCHANGED(Quote_Confirmation_Fax__c),
  ISCHANGED(Send_Channel__c)
 ),
 ISPICKVAL(Send_Channel__c, &quot;Fax&quot;),
 OR(
  If(ISNUMBER(Quote_Confirmation_Fax__c),false,true),
  Quote_Confirmation_Fax__c = &quot;&quot;
 )
)</errorConditionFormula>
    <errorDisplayField>Quote_Confirmation_Fax__c</errorDisplayField>
    <errorMessage>Fax numbers can only contain numbers. Please check the fax number.</errorMessage>
</ValidationRule>