News UAT/force-app/main/default/objects/Booking__c/listViews/Classified_Bookings.listView-meta.xml
<ListView>
    <fullName>Classified_Bookings</fullName>
    <booleanFilter>1</booleanFilter>
    <columns>NAME</columns>
    <columns>CyberAd_Division__c</columns>
    <columns>Payer_Account__c</columns>
    <columns>Advertiser_Account__c</columns>
    <columns>Run_Schedule__c</columns>
    <columns>Source_System__c</columns>
    <columns>Status__c</columns>
    <columns>Line_Item_Gross_Price__c</columns>
    <columns>Total_Cost__c</columns>
    <columns>Sales_Order__c</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Sales_Order_Owner__c</columns>
    <columns>Sales_Order_Placer_Account__c</columns>
    <columns>Sales_Order_Ad_Taker__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>greaterThan</operation>
        <value>18900000</value>
    </filters>
    <label>~ Classified Bookings</label>
</ListView>