News UAT/force-app/main/default/objects/Booking__c/listViews/My_Bookings_Creator.listView-meta.xml
<ListView>
    <fullName>My_Bookings_Creator</fullName>
    <booleanFilter>1</booleanFilter>
    <columns>NAME</columns>
    <columns>CyberAd_Division__c</columns>
    <columns>Payer_Account__c</columns>
    <columns>Advertiser_Account__c</columns>
    <columns>Run_Schedule__c</columns>
    <columns>Source_System__c</columns>
    <columns>Status__c</columns>
    <columns>Line_Item_Gross_Price__c</columns>
    <columns>Total_Cost__c</columns>
    <columns>Sales_Order__c</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Sales_Order_Owner__c</columns>
    <columns>Sales_Order_Placer_Account__c</columns>
    <columns>Sales_Order_Ad_Taker__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Current_User_is_Adtaker__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>~My Bookings (Creator)</label>
</ListView>