News UAT/force-app/main/default/objects/Booking__c/listViews/My_Bookings_Last_7_Days.listView-meta.xml
<ListView>
    <fullName>My_Bookings_Last_7_Days</fullName>
    <columns>NAME</columns>
    <columns>CyberAd_Division__c</columns>
    <columns>Payer_Account__c</columns>
    <columns>Advertiser_Account__c</columns>
    <columns>Run_Schedule__c</columns>
    <columns>Source_System__c</columns>
    <columns>Status__c</columns>
    <columns>Line_Item_Gross_Price__c</columns>
    <columns>Total_Cost__c</columns>
    <columns>Sales_Order__c</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Sales_Order_Owner__c</columns>
    <columns>Sales_Order_Ad_Taker__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <filters>
        <field>Sales_Order_Owner__c</field>
        <operation>contains</operation>
        <value>SIMON PARK</value>
    </filters>
    <label>~My Bookings THIS MONTH</label>
</ListView>