News UAT/force-app/main/default/objects/Booking__c/listViews/Roys_Bookings.listView-meta.xml
<ListView>
    <fullName>Roys_Bookings</fullName>
    <columns>NAME</columns>
    <columns>Advertiser_Account__c</columns>
    <columns>Campaign__c</columns>
    <columns>Line_Item_Gross_Price__c</columns>
    <columns>Payer_Account__c</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Total_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Order_Owner__c</field>
        <operation>contains</operation>
        <value>phung</value>
    </filters>
    <label>Roys Bookings</label>
</ListView>